Remove `importHelpers` and `tslib`

--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -40,7 +40,6 @@
 		"glob": "^10.3.6",
 		"ignore": "^5.2.4",
 		"jsonc": "^2.0.0",
-		"minimatch": "^9.0.3",
-		"tslib": "^2.6.2"
+		"minimatch": "^9.0.3"
 	}
 }
