--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -25,7 +25,6 @@
 		"@markuplint/html-parser": "4.0.0-alpha.3",
 		"@markuplint/ml-ast": "4.0.0-alpha.3",
 		"@markuplint/parser-utils": "4.0.0-alpha.3",
-		"astro-eslint-parser": "^0.16.0",
-		"tslib": "^2.6.2"
+		"astro-eslint-parser": "^0.16.0"
 	}
 }
