--- a/packages/@markuplint/mustache-parser/package.json
+++ b/packages/@markuplint/mustache-parser/package.json
@@ -23,7 +23,6 @@
 	"dependencies": {
 		"@markuplint/html-parser": "4.0.0-alpha.3",
 		"@markuplint/ml-ast": "4.0.0-alpha.3",
-		"@markuplint/parser-utils": "4.0.0-alpha.3",
-		"tslib": "^2.6.2"
+		"@markuplint/parser-utils": "4.0.0-alpha.3"
 	}
 }
