--- a/packages/@markuplint/svelte-parser/package.json
+++ b/packages/@markuplint/svelte-parser/package.json
@@ -24,7 +24,6 @@
 		"@markuplint/html-parser": "4.0.0-alpha.3",
 		"@markuplint/ml-ast": "4.0.0-alpha.3",
 		"@markuplint/parser-utils": "4.0.0-alpha.3",
-		"svelte": "^4.2.1",
-		"tslib": "^2.6.2"
+		"svelte": "^4.2.1"
 	}
 }
