--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"eslint-plugin-jsdoc": "^46.8.2",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-sort-class-members": "^1.17.1",
+		"eslint-plugin-unicorn": "^48.0.1",
 		"heapdump": "^0.3.15",
 		"husky": "^8.0.3",
 		"lerna": "^7.4.0",
