Fix according to `unicorn/no-await-expression-member`

--- a/.eslintrc
+++ b/.eslintrc
@@ -176,6 +176,7 @@
 			"files": ["**/*.spec.{js,mjs,cjs,ts}", "vitest.config.ts"],
 			"rules": {
 				"unicorn/error-message": 0,
+				"unicorn/no-await-expression-member": 0,
 				"import/no-extraneous-dependencies": 0,
 				"@typescript-eslint/no-var-requires": 0,
 				"@typescript-eslint/prefer-readonly-parameter-types": 0
