--- a/.eslintrc
+++ b/.eslintrc
@@ -177,6 +177,7 @@
 			"rules": {
 				"unicorn/error-message": 0,
 				"unicorn/no-await-expression-member": 0,
+				"unicorn/text-encoding-identifier-case": 0,
 				"import/no-extraneous-dependencies": 0,
 				"@typescript-eslint/no-var-requires": 0,
 				"@typescript-eslint/prefer-readonly-parameter-types": 0
