--- a/vscode/.eslintrc
+++ b/vscode/.eslintrc
@@ -4,7 +4,8 @@
 		"NodeJS": true
 	},
 	"rules": {
-		"no-restricted-globals": 0
+		"no-restricted-globals": 0,
+		"unicorn/prefer-module": 0
 	},
 	"overrides": [
 		{
