Add test environments

--- a/vscode/.eslintrc
+++ b/vscode/.eslintrc
@@ -5,7 +5,8 @@
 	},
 	"rules": {
 		"no-restricted-globals": 0,
-		"unicorn/prefer-module": 0
+		"unicorn/prefer-module": 0,
+		"unicorn/prefer-top-level-await": 0
 	},
 	"overrides": [
 		{
