--- a/.github/workflows/test-vscode.yml
+++ b/.github/workflows/test-vscode.yml
@@ -25,4 +25,4 @@ jobs:
               run: yarn install --frozen-lockfile
 
             - name: Run tests
-              run: cd vscode && yarn vscode:test
+              run: cd vscode && yarn vscode:build && yarn vscode:test
