--- a/.github/workflows/test-vscode.yml
+++ b/.github/workflows/test-vscode.yml
@@ -22,7 +22,7 @@ jobs:
                   node-version: 20
 
             - name: Install dependencies
-              run: yarn install --frozen-lockfile
+              run: yarn install --frozen-lockfile && yarn build
 
             - name: Run tests
               run: cd vscode && yarn vscode:build && yarn vscode:test
