--- a/.github/workflows/test-vscode.yml
+++ b/.github/workflows/test-vscode.yml
@@ -5,6 +5,7 @@ on:
         branches:
             - dev
         paths:
+            - '.github/workflows/test-vscode.yml'
             - 'vscode/**'
 
 jobs:
