--- a/.github/workflows/test-vscode.yml
+++ b/.github/workflows/test-vscode.yml
@@ -17,6 +17,14 @@ jobs:
                   # SEE: https://github.com/lerna/lerna/issues/2542
                   fetch-depth: '0'
 
+            - name: Install dependencies and Xvfb
+              run: sudo apt-get update && sudo apt-get install -y xvfb
+
+            - name: Start Xvfb
+              run: |
+                  Xvfb :99 &
+                  echo "DISPLAY=:99.0" >> $GITHUB_ENV
+
             - name: Install Node.js
               uses: actions/setup-node@v3
               with:
