--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
 		"lint-staged": "^15.0.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.0.3",
-		"string-width": "6.1.0",
 		"textlint": "13.3.3",
 		"textlint-filter-rule-comments": "^1.2.2",
 		"textlint-rule-preset-ja-spacing": "^2.3.0",
@@ -91,7 +90,6 @@
 		"typedoc": "^0.25.2",
 		"typedoc-plugin-mdn-links": "^3.1.0",
 		"typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
-		"typescript": "^5.2.2",
-		"wrap-ansi": "8.1.0"
+		"typescript": "^5.2.2"
 	}
 }
