--- a/package.json
+++ b/package.json
@@ -63,15 +63,16 @@
 		"vscode"
 	],
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^6.8.0",
-		"@typescript-eslint/parser": "^6.8.0",
+		"@typescript-eslint/eslint-plugin": "^6.9.0",
+		"@typescript-eslint/parser": "^6.9.0",
 		"cspell": "^7.3.8",
 		"eslint": "^8.52.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-jsdoc": "^46.8.2",
 		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-regexp": "^2.1.0",
 		"eslint-plugin-sort-class-members": "^1.17.1",
 		"eslint-plugin-unicorn": "^48.0.1",
 		"heapdump": "^0.3.15",
