--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:unicorn/recommended",
+		"plugin:regexp/recommended",
 		"plugin:import/recommended",
 		"plugin:import/typescript"
 	],
