--- a/playground/package.json
+++ b/playground/package.json
@@ -11,17 +11,11 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.14",
-		"@markuplint/html-parser": "4.0.0-alpha.5",
-		"@markuplint/html-spec": "4.0.0-alpha.5",
-		"@markuplint/i18n": "4.0.0-alpha.5",
-		"@markuplint/ml-config": "4.0.0-alpha.5",
-		"@markuplint/ml-core": "4.0.0-alpha.5",
 		"@markuplint/parser-utils": "4.0.0-alpha.5",
-		"@markuplint/rules": "4.0.0-alpha.5",
 		"@monaco-editor/react": "^4.5.0",
 		"@webcontainer/api": "^1.1.3",
 		"ansi-regex": "^6.0.1",
-		"markuplint": "^3.8.0",
+		"markuplint": "^4.0.0-alpha.5",
 		"monaco-editor": "^0.38.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
