Add feature to fetch JSON schema of config

--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -20,6 +20,7 @@
 		}
 	},
 	"rules": {
+		"@typescript-eslint/no-unused-vars": [2, { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }],
 		"react/display-name": 0,
 		"react/prop-types": 0,
 		"react-refresh/only-export-components": "warn"
