--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -5,7 +5,6 @@
 	"env": {
 		"browser": true
 	},
-	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
@@ -21,6 +20,18 @@
 	},
 	"rules": {
 		"@typescript-eslint/no-unused-vars": [2, { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }],
+		"@typescript-eslint/prefer-readonly-parameter-types": [
+			1,
+			{
+				"allow": [
+					{ "from": "lib", "name": "URL" },
+					{ "from": "package", "package": "json-schema", "name": "JSONSchema7" },
+					{ "from": "package", "package": "json-schema", "name": "JSONSchema7Definition" }
+				],
+				"checkParameterProperties": false,
+				"ignoreInferredTypes": true
+			}
+		],
 		"react/display-name": 0,
 		"react/prop-types": 0,
 		"react-refresh/only-export-components": "warn"
