--- a/playground/package.json
+++ b/playground/package.json
@@ -26,6 +26,7 @@
 		"@markuplint/jsx-parser": "^4.0.0-alpha.5",
 		"@markuplint/react-spec": "^4.0.0-alpha.5",
 		"@total-typescript/ts-reset": "^0.5.1",
+		"@types/json-schema": "^7.0.15",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
