--- a/playground/package.json
+++ b/playground/package.json
@@ -19,10 +19,12 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-split": "^2.0.14",
-		"xterm": "^5.3.0",
-		"xterm-addon-fit": "^0.8.0"
+		"xterm": "^5.3.0"
 	},
 	"devDependencies": {
+		"@egoist/tailwindcss-icons": "^1.4.0",
+		"@iconify-json/heroicons-solid": "^1.1.8",
+		"@iconify-json/majesticons": "^1.1.8",
 		"@markuplint/jsx-parser": "^4.0.0-alpha.5",
 		"@markuplint/react-spec": "^4.0.0-alpha.5",
 		"@total-typescript/ts-reset": "^0.5.1",
