--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,6 +84,8 @@ jobs:
               with:
                   path: |
                       packages/**/lib
+                      packages/**/cjs
+                      packages/**/esm
                       packages/@markuplint/config-presets/preset.*.json
                       packages/@markuplint/html-spec/index.js
                       packages/@markuplint/html-spec/index.json
@@ -100,6 +102,8 @@ jobs:
                   enableCrossOsArchive: true
                   path: |
                       packages/**/lib
+                      packages/**/cjs
+                      packages/**/esm
                       packages/@markuplint/config-presets/preset.*.json
                       packages/@markuplint/html-spec/index.js
                       packages/@markuplint/html-spec/index.json
@@ -136,6 +140,8 @@ jobs:
               with:
                   path: |
                       packages/**/lib
+                      packages/**/cjs
+                      packages/**/esm
                       packages/@markuplint/config-presets/preset.*.json
                       packages/@markuplint/html-spec/index.js
                       packages/@markuplint/html-spec/index.json
@@ -234,6 +240,8 @@ jobs:
                   enableCrossOsArchive: true
                   path: |
                       packages/**/lib
+                      packages/**/cjs
+                      packages/**/esm
                       packages/@markuplint/config-presets/preset.*.json
                       packages/@markuplint/html-spec/index.js
                       packages/@markuplint/html-spec/index.json
@@ -291,6 +299,8 @@ jobs:
                   enableCrossOsArchive: true
                   path: |
                       packages/**/lib
+                      packages/**/cjs
+                      packages/**/esm
                       packages/@markuplint/config-presets/preset.*.json
                       packages/@markuplint/html-spec/index.js
                       packages/@markuplint/html-spec/index.json
@@ -331,6 +341,8 @@ jobs:
                   enableCrossOsArchive: true
                   path: |
                       packages/**/lib
+                      packages/**/cjs
+                      packages/**/esm
                       packages/@markuplint/config-presets/preset.*.json
                       packages/@markuplint/html-spec/index.js
                       packages/@markuplint/html-spec/index.json
