--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,5 @@
 packages/@markuplint/config-presets/README.md
 packages/@markuplint/config-presets/preset.*.json
+packages/@markuplint/i18n/cjs
+packages/@markuplint/i18n/esm
 playground/dist
