--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -26,7 +26,8 @@
       {
         "ignore": ["^@docusaurus/", "^@site/", "^@theme/", "^@theme-original/"]
       }
-    ]
+    ],
+    "unicorn/filename-case": 0
   },
   "globals": {
     "React": true,
@@ -34,9 +35,24 @@
   },
   "overrides": [
     {
+      "files": ["**/*.tsx", "src/**/*.js"],
+      "rules": {
+        "@typescript-eslint/prefer-readonly-parameter-types": 0,
+        "import/no-default-export": 0,
+        "unicorn/filename-case": [
+          0,
+          {
+            "pascalCase": true
+          }
+        ]
+      }
+    },
+    {
       "files": ["./*.js"],
       "rules": {
-        "@typescript-eslint/no-var-requires": 0
+        "no-restricted-globals": 0,
+        "@typescript-eslint/no-var-requires": 0,
+        "unicorn/prefer-module": 0
       }
     },
     {
