--- a/packages/@markuplint/spec-generator/package.json
+++ b/packages/@markuplint/spec-generator/package.json
@@ -20,18 +20,20 @@
 		"build": "tsc",
 		"clean": "tsc --build --clean"
 	},
-	"devDependencies": {
-		"@markuplint/ml-spec": "4.0.0-alpha.6",
-		"@markuplint/test-tools": "4.0.0-alpha.6",
+	"dependencies": {
 		"@types/cheerio": "^0.22.35",
-		"@types/cli-progress": "^3.11.5",
-		"@types/node-fetch": "^2.6.9",
 		"ajv": "^8.12.0",
 		"cheerio": "^1.0.0-rc.12",
 		"cli-progress": "^3.12.0",
 		"fast-xml-parser": "^4.3.1",
 		"glob": "^10.3.6",
-		"strip-json-comments": "^5.0.1",
+		"strip-json-comments": "^5.0.1"
+	},
+	"devDependencies": {
+		"@markuplint/ml-spec": "4.0.0-alpha.6",
+		"@markuplint/test-tools": "4.0.0-alpha.6",
+		"@types/cli-progress": "^3.11.5",
+		"@types/node-fetch": "^2.6.9",
 		"type-fest": "^4.8.2"
 	}
 }
