--- a/playground/package.json
+++ b/playground/package.json
@@ -19,6 +19,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-split": "^2.0.14",
+		"semver": "^7.5.4",
 		"xterm": "^5.3.0"
 	},
 	"devDependencies": {
@@ -31,6 +32,7 @@
 		"@types/json-schema": "^7.0.15",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/semver": "^7.5.6",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
 		"autoprefixer": "^10.4.14",
 		"eslint-plugin-react": "^7.32.2",
