--- a/playground/package.json
+++ b/playground/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "^18.2.0",
 		"react-split": "^2.0.14",
 		"semver": "^7.5.4",
+		"strip-json-comments": "^5.0.1",
 		"xterm": "^5.3.0"
 	},
 	"devDependencies": {
