--- a/playground/package.json
+++ b/playground/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
 		"postcss": "^8.4.23",
+		"prettier-plugin-tailwindcss": "^0.5.7",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.0"
