--- a/playground/package.json
+++ b/playground/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"pg:dev": "vite",
 		"pg:build": "tsc && vite build",
-		"pg:lint": "eslint src --ext ts,tsx; markuplint 'src/**/*.tsx'",
+		"pg:lint": "eslint src --ext ts,tsx; markuplint 'src/**/*.tsx'; cspell '**' --no-progress; prettier --check 'src/**/*.{js,ts,tsx}'",
 		"pg:preview": "vite preview"
 	},
 	"dependencies": {
