--- a/playground/package.json
+++ b/playground/package.json
@@ -36,10 +36,13 @@
 		"@types/semver": "^7.5.6",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
 		"autoprefixer": "^10.4.14",
+		"cspell": "^8.1.3",
+		"eslint": "^8.55.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
 		"postcss": "^8.4.23",
+		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.7",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
