Use `@markuplint/cli-utils`

--- a/packages/markuplint/tsconfig.json
+++ b/packages/markuplint/tsconfig.json
@@ -8,7 +8,7 @@
 	},
 	"references": [
 		{
-			"path": "../@markuplint/create-rule-helper"
+			"path": "../@markuplint/cli-utils"
 		},
 		{
 			"path": "../@markuplint/file-resolver"
