Fix ESLint parsing error at `assert`

--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -48,7 +48,14 @@
 			}
 		},
 		{
-			"files": ["./*.mjs"],
+			"files": ["./**/*.mjs"],
+			"parser": "@babel/eslint-parser",
+			"parserOptions": {
+				"requireConfigFile": false,
+				"babelOptions": {
+					"plugins": ["@babel/plugin-syntax-import-assertions"]
+				}
+			},
 			"rules": {
 				"import/no-named-as-default-member": 0
 			}
