--- a/playground/package.json
+++ b/playground/package.json
@@ -26,6 +26,8 @@
 		"xterm": "^5.3.0"
 	},
 	"devDependencies": {
+		"@babel/eslint-parser": "^7.23.3",
+		"@babel/plugin-syntax-import-assertions": "^7.23.3",
 		"@egoist/tailwindcss-icons": "^1.7.1",
 		"@iconify-json/heroicons-solid": "^1.1.11",
 		"@iconify-json/majesticons": "^1.1.11",
