Revert "Fix ESLint parsing error at `assert`"
This reverts commit 665da50b12eeee2638f397c20b7f58dc0fce77f5.

--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -48,14 +48,7 @@
 			}
 		},
 		{
-			"files": ["./**/*.mjs"],
-			"parser": "@babel/eslint-parser",
-			"parserOptions": {
-				"requireConfigFile": false,
-				"babelOptions": {
-					"plugins": ["@babel/plugin-syntax-import-assertions"]
-				}
-			},
+			"files": ["./*.mjs"],
 			"rules": {
 				"import/no-named-as-default-member": 0
 			}
