--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
 		"test": "vitest run",
 		"test:coverage": "vitest run --coverage",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
-		"lint": "eslint --fix './packages/**/*.{ts,mjs,cjs,spec.js}'; yarn spellcheck; prettier --write './packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}';",
-		"lint:check": "eslint './packages/**/*.{ts,mjs,cjs,spec.js}' && yarn spellcheck && prettier --check './packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}'",
+		"lint": "run-p lint:*",
+		"lint:eslint": "eslint --fix \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
+		"lint:prettier": "prettier --write \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
+		"lint:spellcheck": "cspell --no-progress --show-suggestions \"**\"",
+		"lint-check": "run-p lint-check:* lint:spellcheck",
+		"lint-check:eslint": "eslint \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
+		"lint-check:prettier": "prettier --check \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
 		"ga": "actionlint .github/workflows/*.yml",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
@@ -19,7 +24,7 @@
 		"cli": "./packages/markuplint/bin/markuplint.mjs",
 		"create-rule": "./packages/@markuplint/create-rule/bin/create-rule.mjs",
 		"vscode:dev": "cd vscode; yarn --ignore-engines; yarn --ignore-engines vscode:dev",
-		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn spellcheck; prettier --write './vscode/**/*{ts,tsx,js,cjs,mjs,json,rc,md}';",
+		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn lint:spellcheck; prettier --write './vscode/**/*{ts,tsx,js,cjs,mjs,json,rc,md}';",
 		"vscode:login": "cd vscode; yarn --ignore-engines vscode:login",
 		"vscode:package": "cp package.json package.json.bak; jq '.workspaces |= map(select(. != \"vscode\"))' package.json > package.json.tmp && mv package.json.tmp package.json; cd vscode; rm -rf node_modules; npm install; npm run vscode:package; rm package-lock.json; cd ..; mv package.json.bak package.json;",
 		"vscode:release": "cp package.json package.json.bak; jq '.workspaces |= map(select(. != \"vscode\"))' package.json > package.json.tmp && mv package.json.tmp package.json; cd vscode; rm -rf node_modules; npm install; npm run vscode:release; rm package-lock.json; cd ..; mv package.json.bak package.json;",
@@ -38,7 +43,6 @@
 		"release:canary": "lerna publish --preid dev --canary --exact --force-publish",
 		"prerelease": "yarn build; yarn test",
 		"prepare": "husky install",
-		"spellcheck": "cspell --no-progress --show-suggestions \"**\"",
 		"up": "yarn upgrade-interactive --latest"
 	},
 	"lint-staged": {
