Move `ga` script to `lint:*`

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
 		"lint:eslint": "eslint --fix \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
 		"lint:prettier": "prettier --write \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
 		"lint:spellcheck": "cspell --no-progress --show-suggestions \"**\"",
+		"lint:github-actions": "actionlint .github/workflows/*.yml",
 		"lint-check": "run-p lint-check:* lint:spellcheck",
 		"lint-check:eslint": "eslint \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
 		"lint-check:prettier": "prettier --check \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
-		"ga": "actionlint .github/workflows/*.yml",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
 		"check:build": "find . -type f -name \"*.d.ts\" -print | xargs grep \"packages/@markuplint\"",
