--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -22,7 +22,11 @@
 	"scripts": {
 		"build": "tsc",
 		"clean": "tsc --build --clean",
-		"schema": "ts-node './gen/types.ts'; json2ts './types.schema.json' > './src/types.schema.ts'; prettier './src/types.schema.ts' './types.schema.json' --write; eslint './src/types.schema.ts' --fix; tsc;"
+		"schema": "run-s schema:types schema:schema build schema:prettier schema:eslint schema:prettier",
+		"schema:types": "node --loader ts-node/esm \"./gen/types.ts\"",
+		"schema:schema": "json2ts \"./types.schema.json\" > \"./src/types.schema.ts\"",
+		"schema:eslint": "eslint --fix \"./src/types.schema.ts\"",
+		"schema:prettier": "prettier --write \"./src/types.schema.ts\" \"./types.schema.json\" --log-level warn"
 	},
 	"dependencies": {
 		"@types/css-tree": "^2.3.4",
