Tidy up `up` script

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"lint-check": "run-p lint-check:* lint:spellcheck",
 		"lint-check:eslint": "eslint \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
 		"lint-check:prettier": "prettier --check \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
-		"schema": "lerna run schema",
-		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
+		"up": "run-s up:deps up:gen up:schema",
+		"up:deps": "yarn upgrade-interactive --latest",
+		"up:gen": "cd packages/\\@markuplint/html-spec/; yarn gen;",
+		"up:schema": "lerna run schema",
 		"check:build": "find . -type f -name \"*.d.ts\" -print | xargs grep \"packages/@markuplint\"",
 		"vscode:dev": "cd vscode; yarn --ignore-engines; yarn --ignore-engines vscode:dev",
 		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn lint:spellcheck; prettier --write './vscode/**/*{ts,tsx,js,cjs,mjs,json,rc,md}';",
@@ -41,7 +43,6 @@
 		"release:canary": "lerna publish --preid dev --canary --exact --force-publish",
 		"prerelease": "yarn build; yarn test",
 		"prepare": "husky install",
-		"up": "yarn upgrade-interactive --latest",
 		"cli": "npx markuplint",
 		"create-rule": "npx @markuplint/create-rule"
 	},
