Tidy up order of scripts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
+		"prepare": "husky install",
 		"all": "run-s clean build gen schema lint test",
 		"build": "lerna run build",
 		"clean": "lerna run clean",
@@ -22,6 +23,10 @@
 		"up:deps": "yarn upgrade-interactive --latest",
 		"up:gen": "cd packages/\\@markuplint/html-spec/; yarn gen;",
 		"up:schema": "lerna run schema",
+		"release": "lerna publish --exact",
+		"release:next": "lerna publish --dist-tag next --exact --force-publish",
+		"release:canary": "lerna publish --preid dev --canary --exact --force-publish",
+		"prerelease": "run-s build test",
 		"check:build": "find . -type f -name \"*.d.ts\" -print | xargs grep \"packages/@markuplint\"",
 		"vscode:dev": "cd vscode; yarn --ignore-engines; yarn --ignore-engines vscode:dev",
 		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn lint:spellcheck; prettier --write './vscode/**/*{ts,tsx,js,cjs,mjs,json,rc,md}';",
@@ -38,11 +43,6 @@
 		"pg:lint": "cd playground; yarn; yarn pg:lint",
 		"pg:up": "cd playground; yarn; yarn pg:up",
 		"apidoc": "typedoc --options ./typedoc.json",
-		"release": "lerna publish --exact",
-		"release:next": "lerna publish --dist-tag next --exact --force-publish",
-		"release:canary": "lerna publish --preid dev --canary --exact --force-publish",
-		"prerelease": "yarn build; yarn test",
-		"prepare": "husky install",
 		"cli": "npx markuplint",
 		"create-rule": "npx @markuplint/create-rule"
 	},
