--- a/vscode/package.json
+++ b/vscode/package.json
@@ -106,8 +106,7 @@
 		"vscode:test": "node ./out/test/run-tests.js",
 		"vscode:login": "vsce login yusukehirao",
 		"vscode:package": "vsce package --no-yarn",
-		"vscode:release": "vsce publish --no-yarn",
-		"vscode:up": "yarn upgrade-interactive --latest"
+		"vscode:release": "vsce publish --no-yarn"
 	},
 	"devDependencies": {
 		"@types/mocha": "^10.0.6",
