Ignore packages on `resolutions` field.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,6 +25,10 @@
 		{
 			"matchPaths": ["packages/**/*"],
 			"ignoreDeps": ["default-markuplint", "test-markuplint"]
+		},
+		{
+			"matchPaths": ["package.json"],
+			"ignoreDeps": ["string-width", "strip-ansi", "wrap-ansi"]
 		}
 	]
 }
