--- a/packages/@markuplint/svelte-parser/package.json
+++ b/packages/@markuplint/svelte-parser/package.json
@@ -10,6 +10,9 @@
 	"exports": {
 		".": {
 			"import": "./lib/index.js"
+		},
+		"./kit": {
+			"import": "./lib/sveltekit-parser.js"
 		}
 	},
 	"types": "lib/index.d.ts",
