--- a/website/package.json
+++ b/website/package.json
@@ -24,7 +24,8 @@
     "gray-matter": "^4.0.3",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.0",
