--- a/website/package.json
+++ b/website/package.json
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.0",
+    "@docusaurus/tsconfig": "^3.1.0",
     "@imgix/js-core": "^3.8.0",
-    "@tsconfig/docusaurus": "^2.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "stylelint": "^16.1.0",
