Add playwright in order to capture pages

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "lib": ["ESNext"]
   }
 }
