--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,7 @@
     "site:build": "yarn site:prebuild; docusaurus build",
     "site:prebuild": "node scripts/prebuild/index.mjs; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
     "site:lint": "prettier --write './**/*{js,ts,tsx,mdx}' './*{json,rc,js}' '!./build/**/*' '!./.docusaurus/**/*'; eslint --fix './**/*.{js,ts,tsx}' './*.{js,ts}'; stylelint './**/*.css'; textlint --fix './website/i18n/ja'; cd ../; yarn cli './website/**/*.tsx'",
+    "site:screenshot": "playwright test tests/screenshot.spec.ts",
     "site:up": "yarn upgrade-interactive --latest"
   },
   "author": "Yusuke Hirao",
@@ -31,6 +32,7 @@
     "@docusaurus/module-type-aliases": "^3.1.0",
     "@docusaurus/tsconfig": "^3.1.0",
     "@imgix/js-core": "^3.8.0",
+    "@playwright/test": "^1.40.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "stylelint": "^16.1.0",
