Add playwright in order to capture pages

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -3,6 +3,7 @@
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "lib": ["ESNext"]
   }
 }
